# metasim

./: README.md  configure.ac
examples/: Makefile.am  wifi.files
examples/wifi/: Makefile.am  Makefile.in  catch.hpp  example.cpp  experiment.cpp  experiment.hpp  link.cpp  link.hpp  linkTest.cpp  message.cpp  message.hpp  messageTest.cpp  netInterfaceTest.cpp  netInterfaceTest1.cpp  netInterfaceTest2.cpp  netInterfaceTest3.cpp  netInterfaceTest4.cpp  netinterface.cpp  netinterface.hpp  node.cpp  node.hpp  nodeTest.cpp  performSimulation.sh  performTests.sh
examples/wifi/GUI/: Exam.xpr  Makefile  aboutwindow.cpp  aboutwindow.hpp  aboutwindow.ui  addnodewindow.cpp  addnodewindow.hpp  addnodewindow.ui  centralwidget.cpp  centralwidget.hpp  centralwidget.ui  experimentmanager.cpp  experimentmanager.hpp  experimentsetup.cpp  experimentsetup.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc  schedulingvisualizer.cpp  schedulingvisualizer.hpp  statisticsvisualizer.cpp  statisticsvisualizer.hpp  toolbar.cpp  toolbar.hpp  visualizer.cpp  visualizer.hpp  wifiGUI.pro
examples/wifi/SchedulingVisualizer/: SchedulingVisualizer.pro  mainwindow.cpp  mainwindow.hpp  schedulingvisualizer.cpp  schedulingvisualizer.hpp
src/: simul.hpp  trace.cpp  trace.hpp
